<resources>
    <string name="app_name">शेअर मार्केट मराठी</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="vengal_interstial">DEFAULT-1616133</string>
    <string name="vangel_video">STOCK_REWARD-4463949</string>
    <string name="vengal_appid">613764787a4169b4b10f04b5</string>

    <string name="opennow_last"> तर मग लगेच अकाउंट ओपन करा आणि जिंका आमचा कडून एक फ्री गिफ्ट 🎁 (अकाउंट ओपन केल्यावर तुमच्या मेलवर गिफ्ट सेंड करण्यात येईल) </string>

    <string name="grow_fe">तुम्हाला माहित आहे का? \n

हा मेसेज वाचायच्या आत तुम्हाला ₹१०० रुपये भेटतील...
कसे काय?
Groww वर ऑफर चालू आहे जर तुम्ही आज Groww मध्ये अकाउंट ओपन केलं तर तुम्हाला 100 रुपये भेटतील अकाउंट ओपनिंग प्रोसेस फार सोपी आहे Groww  तुम्हाला कुठल्याही प्रकारचे शेअर खरेदी आणि विक्री वर ब्रोकरेज चार्जेस लावत नाही ट्रेडिंग चार्जेस 20 रुपये पर ऑर्डर आहे व तुम्ही अमेरिकेतल्या मार्केटमधील स्टॉक पण बाय करू शकतात तेही अगदी कमी पैशात व कमी ब्रोकरेज मध्ये तर लगेच मग Groww मध्ये अकाउंट ओपन करा आणि मिळवा 100 रुपये अगदी मोफत!

</string>

    <string name="upstox_fe">शेअर मार्केटमध्ये डीमॅट खाते उघडण्यासाठी Upstox हे सर्वोत्तम व्यासपीठ आहे. Upstox फ्लॅट रु.20
        ट्रेड  रकमेची पर्वा न करता 20 प्रति ऑर्डर त्यांना सर्वात परवडणारे व्यासपीठ बनवते. डिजिटल गोल्ड,
        आयपीओ आणि म्युच्युअल फंडांवरही शून्य ब्रोकरेज आहेत. नवशिक्यांसाठी आणि ज्यांना जलद खाते सक्रिय करण्याची
        आवश्यकता आहे त्यांच्यासाठी सर्वोत्तम.

        महत्वाची वैशिष्टे
       1.सोपे, जलद आणि सोपे इंटरफेस
2. इक्विटी वर ₹ 20/ऑर्डर पर्यंत
3. 250+ इंडिकेटर्स  100+ चार्ट
4. 2000+ म्युच्युअल फंड योजना
5. डायरेक्ट म्युच्युअल फंडावर जास्त परतावा मिळवा
6. Invest ₹500 पेक्षा कमी गुंतवणूक करा
7. 99.9% शुद्ध 24 के सोने
8. ₹1 पेक्षा कमी गुंतवणूक करा
9. कोठूनही रिअल-टाइम खरेदी/ विक्री करा
10 स्टॉकमध्ये सूचीबद्ध होण्यापूर्वी त्यांची गुंतवणूक करा
11. UPI द्वारे IPO साठी अर्ज करा
12. आपला IPO अर्ज सहज ट्रॅक करा
13. प्रति ऑर्डर फक्त ₹20* पर्यंत भरा
14. TradingView आणि ChartsIQ चार्ट लायब्ररी
        तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
    </string>

    <string name="angel_fe">Angel Broking भारतातील आणखी एक अत्यंत लोकप्रिय स्टॉक ब्रोकर आहे आणि संपूर्ण भारतात त्याची उपस्थिती आहे. आपण एंजेल ब्रोकिंगसह आयुष्यभर विनामूल्य डीमॅट खाते उघडू शकता आणि विनामूल्य चित्रपटाचे तिकीट मिळवू शकता.

Angel Broking मध्ये कोणतेही अग्रिम पेमेंट नाही आणि प्रारंभिक मार्जिन मनी डिपॉझिटवर अवलंबून असते. गुंतवणूकीच्या कोणत्याही आकाराची पर्वा न करता किमान ब्रोकरेज शुल्क रु. 30. तथापि, निधी हस्तांतरित करणे खूपच अखंड आहे.

महत्वाची वैशिष्टे

1. बर्याच वर्षांच्या चांगल्या ट्रॅक रेकॉर्डसह एक विश्वसनीय नाव
2. प्लॅटफॉर्म खूप प्रगत आहे
3. चांगले संशोधन टिपा
4. विनामूल्य आजीवन डीमॅट खाते
    तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
    </string>

    <string name="zerodha_fe"> डिमॅट खाते उघडण्यासाठी भारतीयांमध्ये Zerodha हे आणखी एक लोकप्रिय व्यासपीठ आहे. कंपनी प्रति ऑर्डर 20 किंवा 0.03% (जे कमी असेल) फ्लॅट आकारते. जर Upstox नसेल तर Zerodha हा तुमचा अंतिम पर्याय असावा.

इंटरफेसकडे जाताना, Zerodha कडे निश्चितपणे वापरकर्ता-अनुकूल इंटरफेस आहे, आणि आपण स्टॉक ट्रेडिंगसाठी पूर्णपणे नवीन असलात तरीही आपल्याला त्याची सवय होण्यास वेळ लागू नये. याशिवाय, ते वापरकर्त्यांना तांत्रिक विश्लेषणासाठी प्रगत चार्ट, निर्देशक आणि साधने प्रदान करते.

महत्वाची वैशिष्टे

1. वितरणावर शून्य ब्रोकेरज
2. चांगले मार्जिन; 4 ते 15 वेळा पर्यंत
3. जास्तीत जास्त ब्रोकेरज शुल्क रु.20 प्रत्येक निष्पादित ऑर्डरसाठी
4. हे तांत्रिक विश्लेषणासाठी प्रगत चार्ट, निर्देशक आणि इतर साधनांसह येते
5. खाते उघडण्यासाठी रु.300 शुल्क.
6. Zerodha Varsity तुम्हाला शेअर बाजारातील सर्व मूलभूत गोष्टी शिकण्यास मदत करते.
    तर मग लगेच Open Account (ओपन अकाउंट) बटणावर दाबून अकाउंट ओपन करा
    </string>

    <string name="book1"> हे पुस्तक तुमच्या कष्टाने कमावलेल्या रोख गुंतवणुकीबद्दल आहे. हे आपल्याला स्मार्ट निर्णय घेण्यास मदत करते आणि यादृच्छिकपणे गुंतवणूक करत नाही. पुस्तक तुम्हाला असे क्षेत्र निर्दिष्ट करते जे तुम्हाला उच्च परतावा देण्यास मदत करेल जेणेकरून तुम्हाला हुशार निर्णय घेण्यात मदत होईल. </string>
    <string name="book2"> पीटर लिंच या पुस्तकाचे लेखक सर्वात यशस्वी फंड व्यवस्थापकांपैकी एक आहेत ज्यांचे सरासरी वार्षिक परतावा 13 वर्ष कालावधीसाठी 30% आहे.

पुस्तक मूलभूत गोष्टी चांगल्या प्रकारे स्पष्ट करते आणि सर्व नवशिक्यांसाठी त्यांच्या गुंतवणूकीचा प्रवास सुरू करण्यापूर्वी एक उत्कृष्ट वाचन आहे.

गुंतवणुकीच्या तयारीपासून, कसे, केव्हा, दीर्घकालीन गुंतवणुकीच्या दृष्टिकोनापर्यंत सर्व बाबी या पुस्तकात समाविष्ट आहेत. बाजारातील विविध साठ्यांचे तपशील आणि प्रत्येक खरेदीचा दृष्टिकोन देखील नमूद केला आहे. </string>
    <string name="book3"> निकोलस दाराव, वयाच्या केवळ 39 व्या वर्षी, शेअर बाजारातून 10 कोटी कमावले, तेही अगदी कमी रक्कम गुंतवून.

शेअर बाजारातील जगातील एक उत्कृष्ट पुस्तक, या पुस्तकात त्यांनी या घटनेशी संबंधित तंत्र आणि अनुभव कव्हर केले आहेत. पुस्तक अतिशय सोपे आहे आणि गुंतवणुकीचे सर्व नियम सोप्या पद्धतीने स्पष्ट करतात.</string>
    <string name="book4"> भारतातील शेअर बाजाराचे संपूर्ण सत्य श्री परीख यांनी पुस्तकात उत्कृष्टपणे स्पष्ट केले आहे.

पुस्तक खुप सोप्या आणि समजण्याजोग्या भाषेत लिहिले आहे. हौशी गुंतवणूकदार म्हणून तुम्ही करू शकता अशा चुका हायलाइट करतात. लक्षात ठेवा, तुमच्या स्वतःच्या चुकांमधून शिकणे स्टॉक मार्केटमध्ये मोफत नाही कारण बरेच पैसे पणाला लागतात. </string>
    <string name="book5"> सर्वकालीन महान गुंतवणूकदार श्री वॉरेन बफे यांचे मार्गदर्शक श्री बेंजामिन ग्राहम यांनी हे पुस्तक लिहिले. चांगल्या कारणास्तव त्याला शेअर बाजाराचे बायबल म्हणतात.

शेअर बाजाराची मूलभूत तत्त्वे तल्लखपणे स्पष्ट केली आहेत. या पुस्तकाचे 3 भाग आहेत.

प्रथम, गुंतवणुकीचा दृष्टिकोन बचावात्मक गुंतवणूकदाराद्वारे घेतला जातो. दुसरी आणि तिसरी संकल्पना बाजाराचे वर्तन आणि जोखीम व्यवस्थापन स्पष्ट करते. </string>
    <string name="book6"> वॉरेन बफे ज्या पद्धतीने गुंतवणूक करायला शिकतात ते सर्वोत्तम पुस्तक म्हणजे स्टॉकमध्ये गुंतवणूक करण्याच्या त्याच्या मार्गात खोलवर जाणे.
पुस्तकाची सोपी भाषा समजणे आणि अनुसरण करणे सोपे करते. सोप्या शब्दात सांगायचे तर तुम्ही वॉरेन बफे यांनी गुंतवणूक कशी केली आणि ते उच्च-दोषी शब्द तुम्हाला गोंधळात टाकल्याशिवाय करू शकता.</string>

    <string name="audioble">वरील सर्व पुस्तके ऑडिओबल (Amazon Audible) वर फ्री मध्ये ऐका [Click Here to Open]</string>
</resources>