<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="70dp"
    android:background="@color/white"
    tools:context=".BookFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical"
                android:padding="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:background="@drawable/basic_bg"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <ImageView
                        android:id="@+id/gauid_mrk"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="Guide To Indian Stock Market- Jitendra Gala"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book1"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/basic_bg"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/wallstreet"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="One Up On Wall Street – Peter Lynch"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book2"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/basic_bg"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/cr"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="Share Market Se Kaise Banaye Mene 10 Crore (Hindi)-Nikolas Darvas"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book3"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/audo1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:drawableRight="@drawable/headphones"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/audioble"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/basic_bg"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/stock_rich"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="Stocks to Riches – Parag Parikh"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book4"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/basic_bg"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/itelle"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="The Intelligent Investor-Benjamin Graham"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book5"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:background="@drawable/basic_bg"

                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/buff"
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:layout_gravity="center" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="The Warren Buffet Way- Robert G. Hagstrom"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:textStyle="bold" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="10dp"
                        android:text="@string/book6"
                        android:textColor="@color/black"
                        android:textSize="24sp" />

                    <Button
                        android:id="@+id/book6"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:background="@drawable/button_bg"
                        android:drawableRight="@drawable/amazon"
                        android:drawablePadding="10dp"
                        android:padding="10dp"
                        android:text="Buy Now"
                        android:textAlignment="center"
                        android:textAllCaps="false"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <Button
                    android:id="@+id/audo2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/button_bg"
                    android:drawableRight="@drawable/headphones"
                    android:drawablePadding="10dp"
                    android:padding="10dp"
                    android:text="@string/audioble"
                    android:textAllCaps="false"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <Space
                    android:layout_width="match_parent"
                    android:layout_height="100dp"/>

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</LinearLayout>